        * Migrated to semver

0.61.0  2014-09-17
        + Added schema builder (with method "fields")
        + Added fields validation (only when "fields" method is used)
        + Added class method "as_sql"
        + Added PACKAGE method "index"

0.64    2014-09-19
        + Improved method "columns"
        + Improved relationship framework
        * Fixed bugs

0.65    2014-09-26
        + Dependancy on SQL::Translator now is optional (thanks to @kberov)
        + Added Credits - list of contributors (see README)
        * Fixed bugs
        * Improved tests

0.70    2015-08-14
        + Added ARS_TRACE
        + Created method "update" for quick objects update
        + New mars command "--upload"
        * Improved `find` and `count` methods, now you can use find({ id => [1, 2, 3] }) as '.. where id in (1, 2, 3)'
        * Improved error handling
        * Method `new` now takes simple hashes (not only hashrefs)
        * Improved documentation

0.80    2016-01-05
        + Added method "abstract"
        + Added method "select"
        + Added method "update"
        + Added method "abstract"
        + Added method "next"
        + Added "where in ... " condition to find
        + Added method "connect"
        * Improved error handling
        * Improved "new" method
        + Added LEFT JOIN
        * Optimization of data fetch
        * Improved documentation
        + Added package method "load_info"
        + "Smart accessors"
        + Added cookbook
        * Improved tests

0.84    2016-07-13
        + Added scalarref as an argument of accessor to set not-quoted data (e.g. to send database-specific functions)
        + Now multiobject accessor is a "ARS::Find" object too, you can use such method as "order_by", "desc" etc.
        * Small bugfixes

0.90    2016-07-16
        + Added "smart accessors" to methods "new", "find", "count".
        * Small fixes
        * Improved documentation

0.91    xxxx-xx-xx
        * Fix connection bug